# NTmusic

./: .gitignore  NTmusic与NT-A协议开发计划.md  README.md  plan.md
apps/desktop/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.js  preload.js
apps/desktop/src/ipc/: musicHandlers.js
apps/desktop/src/main/: engineGateway.js
apps/desktop/src/renderer/: main.tsx  styles.css  vite-env.d.ts
apps/desktop/src/renderer/app/: App.tsx
apps/desktop/src/renderer/features/input/: InputPanel.tsx
apps/desktop/src/services/: ntaBridge.js
apps/desktop/src/ui/: music.css  music.html  music.js
apps/ntmusic-player/: package.json
apps/ntmusic-player/renderer-dist/: index.html
apps/ntmusic-player/renderer-dist/assets/: index-45OkU-DZ.css  index-Bi58h9gK.js
apps/ntmusic-player/src/: main.js  preload.js  style.css
apps/ntmusic-player/src/ipc/: musicHandlers.js
apps/ntmusic-player/src/main/: engineGateway.js  ipc.js
apps/ntmusic-player/src/renderer/: index.html  main.tsx  styles.css  vite-env.d.ts
apps/ntmusic-player/src/renderer/app/: App.tsx
apps/ntmusic-player/src/services/: ntaBridge.js
apps/ntmusic-player/src/shared/: events.js
apps/ntmusic-player/src/ui/: music.css  music.js  store.js
docs/: development.md
engine/rust/ntmusic_core/: Cargo.toml
engine/rust/ntmusic_core/src/: lib.rs
engine/rust/vmusic_engine/: Cargo.toml
engine/rust/vmusic_engine/src/: main.rs
plan/: 2026-01-16_engine-gateway-store.md  2026-01-16_react-ts-vite.md
tools/: wheel_probe.py  wheel_probe_README.md
(+14 files in other folders)
