[package]
name = "vmusic_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws", "json"] }
cpal = "0.15"
ringbuf = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rustfft = "6.2"
symphonia = { version = "0.5", features = ["aac", "flac", "mp3", "vorbis", "wav"] }
uuid = { version = "1.10", features = ["v4"] }
